# baremetal-test-example

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  oss-pkg-info.yaml
ldscripts/: arm.ld
src/: CMakeLists.txt  main.c  print.c  print.h  startup_arm.s  test_main.c
